3.9.0/_sources/plot_types/3D/index.rst.txt


.. _sphx_glr_plot_types_3D:

.. _3D_plots:

3D and volumetric data
----------------------

Plots of three-dimensional :math:`(x,y,z)`, surface :math:`f(x,y)=z`, and
volumetric :math:`V_{x, y, z}` data using the `mpl_toolkits.mplot3d` library.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.scatter.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_scatter3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_scatter3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">scatter(xs, ys, zs)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_surface.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_surface3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_surface3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot_surface(X, Y, Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_trisurf.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_trisurf3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_trisurf3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot_trisurf(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.voxels.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_voxels_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_voxels_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">voxels([x, y, z], filled)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_wireframe.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_wire3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_wire3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot_wireframe(X, Y, Z)</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /plot_types/3D/scatter3d_simple
   /plot_types/3D/surface3d_simple
   /plot_types/3D/trisurf3d_simple
   /plot_types/3D/voxels_simple
   /plot_types/3D/wire3d_simple

